--- a/index.html
+++ b/index.html
@@ -19,24 +19,22 @@
 <body>
 	<main>
 		<section>
-			<div class="container mx-auto px-4 pt-10">
-				<div class="md:w-5/12 lg:w-1/2">
-					<div class="product-image">
-						<img src="./images/mac.png" alt="MacBook image" class="img-fluid">
-					</div>
+			<div class="container mx-auto px-4 lg:px-10 pt-10 flex flex-wrap">
+				<div class="product-image px-10 lg:px-20 md:w-5/12 lg:w-1/2">
+					<img src="./images/mac.png" alt="MacBook image">
 				</div>
-				<div class="md:w-7/12 lg:w-1/2">
-					<div class="product-details">
-						<h2>Customize your Blue 24-inch iMac with Apple M1 chip.</h2>
-						<p>Apple M1 chip with 8-core CPU 4 performance cores and 4 efficiency cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt / USB 4 ports Magic Mouse Magic Keyboard - US English</p>
+				<div class="md:w-7/12 lg:w-1/2 md:px-4 lg:px-6">
+					<div class="product-details px">
+						<h2 class="text-4xl lg:text-5xl font-semibold tracking-normal">Customize your Blue 24-inch iMac with Apple M1 chip.</h2>
+						<p class="mt-4 text-lg tracking-wide">Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt / USB 4 ports Magic Mouse Magic Keyboard - US English</p>
 
-						<div class="memory">
-							<h6>Memory</h6>
+						<div class="memory mt-12">
+							<h6 class="font-bold">Memory</h6>
 							<button id="btn_memory_8gb">8GB unified memory</button>
 							<button id="btn_memory_16gb">16GB unified memory</button>
 						</div>
-						<div class="storage">
-							<h6>Storage</h6>
+						<div class="storage mt-12">
+							<h6 class="font-bold">Storage</h6>
 							<button id="btn_storage_256gb">256GB SSD storage</button>
 							<button id="btn_storage_512gb">512GB SSD storage</button>
 							<button id="btn_storage_1tb">1TB SSD storage</button>
