--- a/index.html
+++ b/index.html
@@ -20,65 +20,61 @@
 	<main>
 		<section>
 			<div class="container mx-auto px-4 lg:px-10 pt-10 flex flex-wrap">
-				<div class="product-image px-10 lg:px-20 md:w-5/12 lg:w-1/2">
+				<div class="product-image md:w-5/12 lg:w-1/2 px-8 md:px-4 lg:px-10 xl:px-20">
 					<img src="./images/mac.png" alt="MacBook image">
 				</div>
-				<div class="md:w-7/12 lg:w-1/2 md:px-4 lg:px-6">
-					<div class="product-details px">
-						<h2 class="text-4xl lg:text-5xl font-semibold tracking-normal">Customize your Blue 24-inch iMac with Apple M1 chip.</h2>
-						<p class="mt-4 text-lg tracking-wide">Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt / USB 4 ports Magic Mouse Magic Keyboard - US English</p>
+				<div class="product-details md:w-7/12 lg:w-1/2 md:px-3 lg:px-1 xl:px-6 mt-8 md:mt-0">
+					<h2 class="text-4xl leading-tight lg:text-5xl lg:leading-tight font-semibold tracking-normal">Customize your Blue 24-inch iMac with Apple M1 chip.</h2>
+					<p class="mt-4">Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt / USB 4 ports Magic Mouse Magic Keyboard - US English</p>
 
-						<div class="memory mt-12">
-							<h6 class="font-bold">Memory</h6>
-							<button id="btn_memory_8gb">8GB unified memory</button>
-							<button id="btn_memory_16gb">16GB unified memory</button>
-						</div>
-						<div class="storage mt-12">
-							<h6 class="font-bold">Storage</h6>
-							<button id="btn_storage_256gb">256GB SSD storage</button>
-							<button id="btn_storage_512gb">512GB SSD storage</button>
-							<button id="btn_storage_1tb">1TB SSD storage</button>
-						</div>
-						<div class="delivery-option">
-							<h6>Choose your delivery option</h6>
-							<button id="btn_delivery_free">Friday, Aug 25 FREE Prime Delivery</button>
-							<button id="btn_delivery_charged">Friday, Aug 21 Delivery charge $20</button>
-						</div>
-						<div class="price-details">
-							<h6 class="d-flex flex-nowrap justify-between">
-								<span class="label">Best Price</span>
-								<span class="value">$<span id="best_price">1299</span></span>
-							</h6>
-							<h6 class="d-flex flex-nowrap justify-between">
-								<span class="label">Extra Memory Cost</span>
-								<span class="value">$<span id="memory_cost">0</span></span>
-							</h6>
-							<h6 class="d-flex flex-nowrap justify-between">
-								<span class="label">Extra Storage Cost</span>
-								<span class="value">$<span id="storage_cost">0</span></span>
-							</h6>
-							<h6 class="d-flex flex-nowrap justify-between">
-								<span class="label">Delivery charge</span>
-								<span class="value">$<span id="delivery_cost">0</span></span>
-							</h6>
-							<h6 class="d-flex flex-nowrap justify-between">
-								<span class="label">Total Price</span>
-								<span class="value">$<span id="total_price">0</span></span>
-							</h6>
-						</div>
-						<div class="promo-code">
-							<p>Add Promo code</p>
-							<div class="input-group">
-								<input type="text" id="promo_code_input">
-								<button id="btn_apply_promo">Apply</button>
+					<div class="memory mt-10">
+						<h6 class="font-bold">Memory</h6>
+						<button id="btn_memory_8gb">8GB unified memory</button>
+						<button id="btn_memory_16gb">16GB unified memory</button>
+					</div>
+					<div class="storage mt-10">
+						<h6 class="font-bold">Storage</h6>
+						<button id="btn_storage_256gb">256GB SSD storage</button>
+						<button id="btn_storage_512gb">512GB SSD storage</button>
+						<button id="btn_storage_1tb">1TB SSD storage</button>
+					</div>
+					<div class="delivery-option mt-10">
+						<h6 class="font-bold">Choose your delivery option</h6>
+						<button id="btn_delivery_free">Friday, Aug 25 FREE Prime Delivery</button>
+						<button id="btn_delivery_charged">Friday, Aug 21 Delivery charge $20</button>
+					</div>
+					<div class="price-details mt-10 sm:w-1/2 md:w-3/4 xl:w-1/2">
+						<h6 class="font-bold p-1 border-b border-gray-300 flex flex-nowrap justify-between">
+							<span class="label">Best Price</span>
+							<span class="value w-20 px-2">$<span id="best_price">1299</span></span>
+						</h6>
+						<h6 class="font-bold p-1 border-b border-gray-300 flex flex-nowrap justify-between">
+							<span class="label">Extra Memory Cost</span>
+							<span class="value w-20 px-2">$<span id="memory_cost">0</span></span>
+						</h6>
+						<h6 class="font-bold p-1 border-b border-gray-300 flex flex-nowrap justify-between">
+							<span class="label">Extra Storage Cost</span>
+							<span class="value w-20 px-2">$<span id="storage_cost">0</span></span>
+						</h6>
+						<h6 class="font-bold p-1 border-b-2 border-black flex flex-nowrap justify-between">
+							<span class="label">Delivery charge</span>
+							<span class="value w-20 px-2">$<span id="delivery_cost">0</span></span>
+						</h6>
+						<h6 class="font-bold p-1 border-b border-gray-300 flex flex-nowrap justify-between">
+							<span class="label">Total Price</span>
+							<span class="value w-20 px-2">$<span id="total_price">0</span></span>
+						</h6>
+						<div class="promo-code mt-4">
+							<p class="font-medium">Add Promo code</p>
+							<div class="mt-1 flex flex-nowrap">
+								<input type="text" id="promo_code_input" class="border border-gray-300 rounded w-full flex-shrink px-3 py-1">
+								<button id="btn_apply_promo" class="flex-shrink-0 border-0 bg-red-400 hover:border-0 hover:bg-red-700 text-white rounded px-3 py-1 mt-0">Apply</button>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="w-full">
-					<div class="grand-total text-center">
-						<h3>Total: $<span id="product_grand_total">1299</span></h3>
-					</div>
+				<div class="w-full text-center pt-4 pb-2 mt-4 border-t border-gray-300">
+					<h3 class="text-4xl lg:text-5xl font-semibold tracking-normal">Total: $<span id="product_grand_total">1299</span></h3>
 				</div>
 			</div>
 		</section>
