--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Interactive MacBook Pro Purchase Configuration Assignment</title>
+	<title>Interactive MacBook Pro Purchase Configuration</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
@@ -35,22 +35,23 @@
 
 					<div class="memory mt-10">
 						<h6 class="font-bold">Memory</h6>
-						<div id="memory_options">
-							<button id="btn_memory_8gb">8GB unified memory</button>
-							<button id="btn_memory_16gb">16GB unified memory</button>
-						</div v>
+						<button id="btn_memory_8gb">8GB unified memory</button>
+						<button id="btn_memory_16gb">16GB unified memory</button>
 					</div>
+
 					<div class="storage mt-10">
 						<h6 class="font-bold">Storage</h6>
 						<button id="btn_storage_256gb">256GB SSD storage</button>
 						<button id="btn_storage_512gb">512GB SSD storage</button>
 						<button id="btn_storage_1tb">1TB SSD storage</button>
 					</div>
+
 					<div class="delivery-option mt-10">
 						<h6 class="font-bold">Choose your delivery option</h6>
 						<button id="btn_delivery_free">Friday, Aug 25 FREE Prime Delivery</button>
 						<button id="btn_delivery_charged">Friday, Aug 21 Delivery charge $20</button>
 					</div>
+					
 					<div class="price-details mt-10 sm:w-1/2 md:w-3/4 xl:w-1/2">
 						<h6 class="font-bold p-1 border-b border-gray-300 flex flex-nowrap justify-between">
 							<span class="label">Best Price</span>
@@ -72,6 +73,7 @@
 							<span class="label">Total Price</span>
 							<span class="value w-20 px-2">$<span id="total_cost">1299</span></span>
 						</h6>
+						<!-- promo code area -->
 						<div class="promo-code mt-4">
 							<p class="font-medium">Add Promo code</p>
 							<div class="mt-1 flex flex-nowrap">
